tests/init_state/move_and_drop/call_target_of_uninit.err.expected
error: at 5:13: [INIT-UseBeforeInit] In function 'f', block 'entry': variable 'g' is used before initialization
   |
 5 |             call copy g(1);
   |             ^^^^^^^^^^^^^^
